--- a/src/kendoTuto/appsettings.json
+++ b/src/kendoTuto/appsettings.json
@@ -8,6 +8,6 @@
     }
   },
   "DbConnection": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=AppDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=kendoDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
