--- a/src/kendoTuto.App/project.json
+++ b/src/kendoTuto.App/project.json
@@ -1,8 +1,9 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
-    "Microsoft.EntityFrameworkCore": "1.0.1",
+    "kendoTuto.Domain": "1.0.0-*",
+    "kendoTuto.Infrastructure": "1.0.0-*",
     "NETStandard.Library": "1.6.0"
   },
 
